<resources>
    <string name="app_name">UI Test for Chamba</string>
    <string name="hello_world">Hello World</string>
    <string name="btn_en">English</string>
    <string name="btn_ru">Russian</string>
    <string name="btn_de">German</string>
    <string name="btn_fr">French</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
